{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1309,
  "lineage": "d0e5a56a-9bb5-ccd8-3d40-d041d7e1f3e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c45639855758f7f7",
            "domain": "vpc",
            "id": "eipalloc-0c45639855758f7f7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-112-136.compute-1.amazonaws.com",
            "public_ip": "3.222.112.136",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a82b67be1874b8a4",
            "domain": "vpc",
            "id": "eipalloc-0a82b67be1874b8a4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-58-228.compute-1.amazonaws.com",
            "public_ip": "3.234.58.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a699202e5027c10d",
            "arn": "arn:aws:ec2:us-east-1:690483157857:instance/i-0f81c77fe31de769c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0f81c77fe31de769c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a84103ea6a0cc967",
            "private_dns": "ip-10-0-3-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b22949c598c6935",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f2138d38c3d3d208"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b7bdbe0e206221e",
            "tags": {
              "Name": "Ansible_Terraform_EC2_App"
            },
            "tags_all": {
              "Name": "Ansible_Terraform_EC2_App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2138d38c3d3d208"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.Terraform-ansible-ssm-iam-profile",
            "aws_iam_role.Terraform-ansible-ssm-iam-role",
            "aws_security_group.ec2_security_group_app",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a699202e5027c10d",
            "arn": "arn:aws:ec2:us-east-1:690483157857:instance/i-0805074a65e9b8195",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0805074a65e9b8195",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00aa3299c0c96cc37",
            "private_dns": "ip-10-0-4-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084e20465e83de936",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f2138d38c3d3d208"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6aa02f8cd5e1702",
            "tags": {
              "Name": "Ansible_Terraform_EC2_App"
            },
            "tags_all": {
              "Name": "Ansible_Terraform_EC2_App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2138d38c3d3d208"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.Terraform-ansible-ssm-iam-profile",
            "aws_iam_role.Terraform-ansible-ssm-iam-role",
            "aws_security_group.ec2_security_group_app",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a699202e5027c10d",
            "arn": "arn:aws:ec2:us-east-1:690483157857:instance/i-07d0dea2cf036dec9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-07d0dea2cf036dec9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5f7a94fbb48e14d",
            "private_dns": "ip-10-0-3-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061e80bf2b82021ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-030a9c3cb007a342b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b7bdbe0e206221e",
            "tags": {
              "Name": "Ansible_Terraform_EC2_DB"
            },
            "tags_all": {
              "Name": "Ansible_Terraform_EC2_DB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030a9c3cb007a342b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.Terraform-ansible-ssm-iam-profile",
            "aws_iam_role.Terraform-ansible-ssm-iam-role",
            "aws_security_group.ec2_security_group_db",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_ansible_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:internet-gateway/igw-01d39607262cce3ba",
            "id": "igw-01d39607262cce3ba",
            "owner_id": "690483157857",
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_ansible_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690483157857:loadbalancer/app/Terraform-ansible-LB/b2919a2d5565be05",
            "arn_suffix": "app/Terraform-ansible-LB/b2919a2d5565be05",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terraform-ansible-LB-784319004.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:690483157857:loadbalancer/app/Terraform-ansible-LB/b2919a2d5565be05",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ansible-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01b78ff45cca0a498"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c0614b44034d3dbb"
              },
              {
                "subnet_id": "subnet-0e4de0b39d21f4eb6"
              }
            ],
            "subnets": [
              "subnet-0c0614b44034d3dbb",
              "subnet-0e4de0b39d21f4eb6"
            ],
            "vpc_id": "vpc-030ce4d6dba30d04a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform_ansible_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690483157857:listener/app/Terraform-ansible-LB/b2919a2d5565be05/9f6dcc2f7af3a570",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690483157857:targetgroup/Terraform-ansible-TG/063c69f77c12c46a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690483157857:listener/app/Terraform-ansible-LB/b2919a2d5565be05/9f6dcc2f7af3a570",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690483157857:loadbalancer/app/Terraform-ansible-LB/b2919a2d5565be05",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform_ansible_lb",
            "aws_lb_target_group.terraform_ansible_target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform_ansible_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690483157857:targetgroup/Terraform-ansible-TG/063c69f77c12c46a",
            "arn_suffix": "targetgroup/Terraform-ansible-TG/063c69f77c12c46a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690483157857:targetgroup/Terraform-ansible-TG/063c69f77c12c46a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Terraform-ansible-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690483157857:targetgroup/Terraform-ansible-TG/063c69f77c12c46a-20240408152626707800000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690483157857:targetgroup/Terraform-ansible-TG/063c69f77c12c46a",
            "target_id": "i-0f81c77fe31de769c"
          },
          "dependencies": [
            "aws_iam_instance_profile.Terraform-ansible-ssm-iam-profile",
            "aws_iam_role.Terraform-ansible-ssm-iam-role",
            "aws_instance.app_instance",
            "aws_lb_target_group.terraform_ansible_target_group",
            "aws_security_group.ec2_security_group_app",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690483157857:targetgroup/Terraform-ansible-TG/063c69f77c12c46a-20240408152626979200000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690483157857:targetgroup/Terraform-ansible-TG/063c69f77c12c46a",
            "target_id": "i-0805074a65e9b8195"
          },
          "dependencies": [
            "aws_iam_instance_profile.Terraform-ansible-ssm-iam-profile",
            "aws_iam_role.Terraform-ansible-ssm-iam-role",
            "aws_instance.app_instance",
            "aws_lb_target_group.terraform_ansible_target_group",
            "aws_security_group.ec2_security_group_app",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a82b67be1874b8a4",
            "association_id": "eipassoc-09db980dab46e12d1",
            "connectivity_type": "public",
            "id": "nat-085393e1435ee8ea0",
            "network_interface_id": "eni-0ecbaa55528829dc2",
            "private_ip": "10.0.1.225",
            "public_ip": "3.234.58.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0614b44034d3dbb",
            "tags": {
              "Name": "Ansible_terraform NAT"
            },
            "tags_all": {
              "Name": "Ansible_terraform NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_ansible_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:route-table/rtb-04e1cb2a398e1d375",
            "id": "rtb-04e1cb2a398e1d375",
            "owner_id": "690483157857",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085393e1435ee8ea0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_ansible_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:route-table/rtb-0705e6fba2e8e56ec",
            "id": "rtb-0705e6fba2e8e56ec",
            "owner_id": "690483157857",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d39607262cce3ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_ansible_igw",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00012965b77988fc3",
            "route_table_id": "rtb-04e1cb2a398e1d375",
            "subnet_id": "subnet-03b7bdbe0e206221e"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_ansible_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09882904c89137004",
            "route_table_id": "rtb-04e1cb2a398e1d375",
            "subnet_id": "subnet-0b6aa02f8cd5e1702"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_ansible_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be61a97c21ef7ead",
            "route_table_id": "rtb-0705e6fba2e8e56ec",
            "subnet_id": "subnet-0c0614b44034d3dbb"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_ansible_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048452a7914a81d35",
            "route_table_id": "rtb-0705e6fba2e8e56ec",
            "subnet_id": "subnet-0e4de0b39d21f4eb6"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_ansible_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:security-group/sg-01b78ff45cca0a498",
            "description": "Security group for alb   allowing inbound traffic on ports 80 and 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b78ff45cca0a498",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "690483157857",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:security-group/sg-0f2138d38c3d3d208",
            "description": "Security group for EC2 instances allowing inbound traffic on ports 80, 22, 443, and ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2138d38c3d3d208",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ec2-security-group-app",
            "name_prefix": "",
            "owner_id": "690483157857",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:security-group/sg-030a9c3cb007a342b",
            "description": "Security group for DB instance allowing inbound traffic on ports 80, 22, 443, 5432  and ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030a9c3cb007a342b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ec2-security-group-DB",
            "name_prefix": "",
            "owner_id": "690483157857",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:subnet/subnet-03b7bdbe0e206221e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b7bdbe0e206221e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690483157857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_ansible_Private_Subnet_production_1"
            },
            "tags_all": {
              "Name": "Terraform_ansible_Private_Subnet_production_1"
            },
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:subnet/subnet-0b6aa02f8cd5e1702",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6aa02f8cd5e1702",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690483157857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_ansible_Private_Subnet_production_2"
            },
            "tags_all": {
              "Name": "Terraform_ansible_Private_Subnet_production_2"
            },
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:subnet/subnet-0c0614b44034d3dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0614b44034d3dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690483157857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_ansible_Public_Subnet_production_1"
            },
            "tags_all": {
              "Name": "Terraform_ansible_Public_Subnet_production_1"
            },
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:subnet/subnet-0e4de0b39d21f4eb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4de0b39d21f4eb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690483157857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_ansible_Public_Subnet_production_2"
            },
            "tags_all": {
              "Name": "Terraform_ansible_Public_Subnet_production_2"
            },
            "vpc_id": "vpc-030ce4d6dba30d04a"
          },
          "dependencies": [
            "aws_vpc.terraform_ansible_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_ansible_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690483157857:vpc/vpc-030ce4d6dba30d04a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080355ee00c6c8337",
            "default_route_table_id": "rtb-011552adf1166a486",
            "default_security_group_id": "sg-0b606344b1fed6704",
            "dhcp_options_id": "dopt-0550f9c10eb81fbe6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030ce4d6dba30d04a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011552adf1166a486",
            "owner_id": "690483157857"
          }
        }
      ]
    }
  ]
}